[metadata]
name = smvplot
version = 0.0.2
author = Nagarajan Paramasivam
author_email = n.paramasivam@dkfz.de
description = smvplot is a cmd line python tool to generate IGV-like screenshots
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NagaComBio/smvplot
project_urls =
    Bug Tracker = https://github.com/NagaComBio/smvplot/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib

[options.extras_require]
pysam = pysam
pysamstats = pysamstats

[options.entry_points]
console_scripts = 
    smvplot = smvplot.visualize:main

[options.packages.find]
where = src
